# otus-cpp-2

./: .gitignore  CMakeLists.txt  ip-filter.cpp  ip_filter
.github/workflows/: cmake-single-platform.yml  release.yml
include/: filter_ip.hpp
src/: CMakeLists.txt  ip-filter.cpp  ip-filter1.cpp
tests/: CMakeLists.txt  test_filter_ip.cpp
